# claude-open-marketplace

./: README.md
.claude-plugin/: marketplace.json
plugins/transcription/: .mcp.json  README.md  pyproject.toml  server.py  transcription.py
plugins/transcription/.claude-plugin/: plugin.json
plugins/transcription/skills/transcribe/: SKILL.md
